[CHORE] 자바 버전 21에서 17로 변경